# libversion

./: CMakeLists.txt
.github/workflows/: ci.yml
cmake/: install-config.cmake  project-is-top-level.cmake
libversion/: CMakeLists.txt  libversion.pc.in
tests/: CMakeLists.txt
utils/: CMakeLists.txt
utils/version_compare/: CMakeLists.txt
utils/version_explain/: CMakeLists.txt
utils/version_sort/: CMakeLists.txt
